--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">Samantha Stroombergen</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,9 +50,9 @@
         </div>
       </div>
     </nav>
-    <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">[YOUR NAME]</h1>
-    <h3 class="text-center">Front-end developer, based in [YOUR LOCATION]</h3>
+    <h2 class="text-center">👋 Hi, I‘m</h2>
+    <h1 class="text-center name">Samantha Stroombergen</h1>
+    <h3 class="text-center">Front-end developer, based in Amsterdam</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="primary-link">Contact me</a>
       <a href="about.html" class="secondary-link">About me</a>
