--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[YOUR NAME]</title>
+    <title>About front-end developer Samantha Stroombergen</title>
+    <meta
+      name="description"
+      content="Learn more about the Netherlands-based front-end developer Samantha Stroombergen."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -52,17 +56,17 @@
     </nav>
     <h2 class="text-center">👋 Hi, I‘m</h2>
     <h1 class="text-center name">Samantha Stroombergen</h1>
-    <h3 class="text-center">Front-end developer, based in Amsterdam</h3>
+    <h3 class="text-center">🇳🇱 Front-end developer, based in Amsterdam</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="primary-link">Contact me</a>
       <a href="about.html" class="secondary-link">About me</a>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img src="images/yoga.png" class="img-fluid rounded" />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -71,12 +75,12 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link launch-link">Launch Yoga App</a>
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -84,19 +88,19 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+          <div class="mt-5" id="weather-button">
+            <a href="#" class="primary-link launch-link">Launch Weather App</a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <img src="images/weather.png" class="img-fluid rounded" />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <img src="images/yogurt.png" class="img-fluid rounded" />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -104,8 +108,8 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+          <div class="mt-5" id="yogurt-button">
+            <a href="#" class="primary-link launch-link">Launch Yogurt App</a>
           </div>
         </div>
       </div>
