Improvements SEO and responsiveness

--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Learn more about or contact Samantha Stroombergen."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -48,7 +52,7 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
+    <h1 class="text-center">About Samantha Stroombergen</h1>
     <h3 class="text-center">Front-end developer from Amsterdam</h3>
     <div class="about-paragraphs text-center">
       <p>
@@ -61,13 +65,25 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid p-2 shadow rounded img-about"
+            alt="Yoga project preview"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/weather.png"
+            class="img-fluid p-2 shadow rounded img-about"
+            alt="Weather project preview"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid p-2 shadow rounded img-about"
+            alt="Yogurt project preview"
+          />
         </div>
       </div>
     </div>
