--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About front-end developer Samantha Stroombergen</title>
+    <title>Projects from the front-end developer Samantha Stroombergen</title>
     <meta
       name="description"
       content="Learn more about the Netherlands-based front-end developer Samantha Stroombergen."
@@ -64,7 +64,11 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid rounded img-home"
+            alt="Yoga project preview"
+          />
         </div>
         <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -93,12 +97,20 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded img-home"
+            alt="Weather project preview"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-sm-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded img-home"
+            alt="Yogurt project preview"
+          />
         </div>
         <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
